이미지 전부 저장

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <div class="header">
         <div class="logo-menu">
           <a class="logo" href="https://www.getstark.co/">
-            <img src="./img/파란로고.JPG" width="32" height="32" />
+            <img src="./asset/img/파란로고.JPG" width="32" height="32" />
           </a>
           <div class="menu">
             <a href="."
@@ -83,29 +83,29 @@
           <!-- 로고 박스 있는 부분-->
           <div class="logo-box">
             <a href="">
-              <img src="./img/Making Accessible.jpg" alt="" />
+              <img src="./asset/img/Making Accessible.jpg" alt="" />
               <p>RESOURCES</p>
               <h4 class="ellipsis">Making Accessible Books</h4>
             </a>
             <a href="">
-              <img src="./img/Inclusive.jpg" alt="" />
+              <img src="./asset/img/Inclusive.jpg" alt="" />
               <p>RESOURCES</p>
               <h4 class="ellipsis">Inclusive Publishing</h4>
             </a>
             <a href="">
-              <img src="./img/The APLN.png" alt="" />
+              <img src="./asset/img/The APLN.png" alt="" />
               <p>RESOURCES</p>
               <h4>The APLN (Accessible Publishing Learning Network)</h4>
             </a>
             <a href="">
-              <img src="./img/Inclusive.jpg" alt="" />
+              <img src="./asset/img/Inclusive.jpg" alt="" />
               <p>RESOURCES</p>
               <h4>
                 The DAISY Consortium’s Accessible Publishing Knowledge Base
               </h4>
             </a>
             <a href="">
-              <img src="./img/Languafe.png" alt="" />
+              <img src="./asset/img/Languafe.png" alt="" />
               <p>RESOURCES</p>
               <h4>
                 Language, Please: Style Guide &amp; Resources for journalists
@@ -113,7 +113,7 @@
               </h4>
             </a>
             <a href="">
-              <img src="./img/4 steps to more.png" alt="" />
+              <img src="./asset/img/4 steps to more.png" alt="" />
               <p>RESOURCES</p>
               <h4>4 steps to more inclusive, precise language</h4>
             </a>
@@ -130,15 +130,15 @@
           <div class="imgThree">
             <a style="background-color: #f6f6eb" href="">
               <h4>Disability Employment</h4>
-              <img src="./img/Disability.png" alt="" />
+              <img src="./asset/img/Disability.png" alt="" />
             </a>
             <a style="background-color: #f3f2fc" href="">
               <h4>Making Accessible Color Combos</h4>
-              <img src="./img/Making.png" alt="" />
+              <img src="./asset/img/Making.png" alt="" />
             </a>
             <a style="background-color: #f6f6eb" href="">
               <h4>Trips and Tricks for Inclusive Social Media</h4>
-              <img src="./img/Tips and Tricks.png" alt="" />
+              <img src="./asset/img/Tips and Tricks.png" alt="" />
             </a>
           </div>
         </div>
@@ -149,7 +149,7 @@
       <div>
         <h1>Made remotely with love by Stark Lab, Inc.</h1>
         <span>
-          <img src="./img/하얀로고.JPG" alt="" />
+          <img src="./asset/img/하얀로고.JPG" alt="" />
         </span>
       </div>
       <!-- 메뉴 카테고리 펼쳐 놓은 것들 -->
@@ -199,25 +199,25 @@
       <div class="ft-icons">
         <div>
           <a href="">
-            <img src="./img/twitter.png" alt="" />
+            <img src="./asset/img/twitter.png" alt="" />
           </a>
           <a href="">
-            <img src="./img/instagram.png" alt="" />
+            <img src="./asset/img/instagram.png" alt="" />
           </a>
           <a href="">
-            <img src="./img/slack.png" alt="" />
+            <img src="./asset/img/slack.png" alt="" />
           </a>
           <a href="">
-            <img src="./img/share-linkedin.png" alt="" />
+            <img src="./asset/img/share-linkedin.png" alt="" />
           </a>
           <a href="">
-            <img src="./img/youtube.png" alt="" />
+            <img src="./asset/img/youtube.png" alt="" />
           </a>
           <a href="">
-            <img src="./img/dribbble.png" alt="" />
+            <img src="./asset/img/dribbble.png" alt="" />
           </a>
           <a href="">
-            <img src="./img/meetup.png" alt="" />
+            <img src="./asset/img/meetup.png" alt="" />
           </a>
         </div>
         <p class="starkLab">STARK LAB, INC. COPYRIGHT 2023</p>
